--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Getting Started Example",
-  "version": "1.0",
-  "description": "Build an Extension!",
+  "name": "Ajax Interceptor",
+  "version": "0.1",
+  "description": "Intercept ajax request and modify response text!",
   "permissions": [
     "activeTab",
     "declarativeContent",
@@ -21,10 +21,10 @@
   "browser_action": {
   },
   "icons": {
-    "16": "images/get_started16.png",
-    "32": "images/get_started32.png",
-    "48": "images/get_started48.png",
-    "128": "images/get_started128.png"
+    "16": "images/16.png",
+    "32": "images/32.png",
+    "48": "images/48.png",
+    "128": "images/128.png"
   },
   "manifest_version": 2,
   "content_scripts": [
