--- a/iframe/package.json
+++ b/iframe/package.json
@@ -17,7 +17,9 @@
     "ppfish": "^1.6.7",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "style-loader": "^0.23.1"
+    "react-json-view": "^1.19.1",
+    "style-loader": "^0.23.1",
+    "svg-loader": "0.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
