--- a/iframe/package.json
+++ b/iframe/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "popup.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.3.0",
     "antd": "^3.13.1",
+    "css-loader": "^2.1.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "postcss-loader": "^3.0.0",
@@ -19,13 +21,15 @@
     "react-dom": "^16.8.1",
     "react-json-view": "^1.19.1",
     "style-loader": "^0.23.1",
-    "svg-loader": "0.0.2"
+    "svg-loader": "0.0.2",
+    "webpack": "^4.29.6"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
   }
 }
