--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Ajax Interceptor",
-  "version": "0.3",
-  "description": "Intercept ajax requests and modify response text!",
+  "version": "0.4",
+  "description": "To modify response text of ajax requests",
   "permissions": [
     "declarativeContent",
     "storage",
