--- a/iframe/package.json
+++ b/iframe/package.json
@@ -34,6 +34,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "monaco-editor-webpack-plugin": "^7.0.1",
+    "webpack-bundle-analyzer": "^4.9.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^3.11.2"
   }
